<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetTester</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">NetTester Settings</string>
    <string name="action_about">About</string>
    <string name="tab_measure">Measure</string>
    <string name="tab_result">Result</string>
    <string name="txt_measuretarget">Please select a measurement target:</string>
    <string name="hello_result">Hello result!</string>
    
    <string name="ui_result_title">NetTester Result</string>
    <string name="login_ui_title">NetTester Login</string>
    <string name="ui_signup_title">NetTester Signup</string>
    
    <string name="btn_test">Begin Test</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_close">Close</string>
    
    <string name="enter_username">User name</string>
    <string name="enter_password">Password</string>
    <string name="enter_password_again">Enter password again</string>
    
    <string name="pref_login_title">Login Setting</string>
    <string name="pref_login_view_title">Login account</string>
    <string name="pref_login_view_default">Click to login your NetTester account</string>
    <string name="pref_login_username_title">Your user name</string>
    <string name="pref_login_username_default">Anonymous</string>
    <string name="pref_logout_view_title">Logout account</string>
    <string name="pref_logout_view_default">Click to logout your NetTester account</string>
    
    <string name="pref_server_title">Server List</string>
    <string name="pref_server_dialog_title">Sync server list</string>
    <string name="pref_server_dialog_summary">Click to sync measurement server list</string>
    <string name="pref_server_last_title">Last sync time</string>
    <string name="pref_server_last_summary">Never</string>
    
    <string name="pref_offline_title">Offline logs</string>
    <string name="pref_offline_dialog_title">Sync offline logs</string>
    <string name="pref_offline_dialog_summary">Click to sync offline measurement logs</string>
    <string name="pref_offline_last_title">Last sync time</string>
    <string name="pref_offline_last_summary">Never</string>
    
    <string name="pref_about_title">About</string>
    <string name="pref_about_intro_title">App about</string>
    <string name="pref_about_intro_summary">A project for PolyU COMP5527</string>
    <string name="pref_about_version_title">App version</string>
    <string name="pref_about_version_summary">1.0.0.0</string>
    
    <string name="sync_default">Please click the button to sync:</string>
    <string name="sync_doing">It is syncing, please wait a bit ...</string>
    <string name="sync_ok">The sync of server list is successful! :-)</string>
    <string name="sync_fail">The sync of server list is failed! :()</string>
    <string name="btn_sync">Sync</string>
    
    <string name="pick_result">A measurement log</string>

</resources>
